<resources>
    <!-- Main Activity Strings.-->
    <string name="app_name">Equivalent Resistor</string>
    <string name="compact">Compact</string>
    <string name="accurate">Accurate</string>
    <string name="go">GO</string>
    <string name="search_hint">Desired Resistance</string>
    <string name="no_resistors_message">Please Edit The Available Resistances.</string>
    <string name="wait">Please wait</string>
    <string name="ready">Ready to optimize.</string>


    <!-- Information dialog Strings.-->
    <string name="dialog_information_title">Extra Information</string>
    <string name="exit">Exit</string>
    <string name="unit">ohms</string>
    <string name="resistance">Resistance:</string>
    <string name="difference">Difference:</string>
    <string name="size">Size:</string>
    <string name="rank">Rank:</string>

    <!-- menu Strings -->
    <string name="edit">edit resistances</string>

    <!-- Adding new resistor set dialog Strings. -->
    <string name="name">Set Name</string>
    <string name="add_resistor_set_dialog_title">Please name the new set</string>
    <string name="download_resistor_set_dialog_title">Please enter the URL</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_instructions">Provide URL for data \n Follow format of example URL (raw file from GitHub)</string>
    <string name="url">URL</string>
    <string name="set_url_dialog_title">Please provide a URL</string>
    <string name="downloading">Downloading…</string>
    <string name="example_url">https://raw.githubusercontent.com/Shu244/Resistor-Sets/master/JHU%20Mastering%20Electronics%20Set</string>
    <string name="cant_download">Cannot download set</string>
    <string name="error">Error</string>

    <!-- Adding new resistor to set Strings. -->
    <string name="ohms">Ohms:</string>
    <string name="qty">Qty:</string>
    <string name="default_resistance">1000</string>
    <string name="default_qty">1</string>
    <string name="submit">submit</string>
    <string name="cant_write">Cannot save file for some reason</string>
    <string name="cannot_save">Cannot save values</string>
</resources>
